refactor: modify importadorapucallpa

--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
           username: ${GIT_USER}
           password: ${GIT_PASSWORD}
           default-label: "master"
+          skip-ssl-validation: true
   security:
     user:
       name: root
