--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -13,10 +13,10 @@ spring:
         locator:
           enabled: true
       routes:
-        - id: customer-service
-          uri: lb://customer-service
+        - id: importadorapucallpa-service
+          uri: lb://importadorapucallpa-service
           predicates:
-            - Path=/customers/**
+            - Path=/importadorapucallpa/**
         - id: product-service
           uri: lb://product-service
           predicates:
