--- a/config-service/Dockerfile
+++ b/config-service/Dockerfile
@@ -1,21 +1,19 @@
-# FROM openjdk:17-jdk-slim
-# RUN addgroup --system spring && adduser --system spring -ingroup spring
-# USER spring:spring
-
-# ADD target/config-service-0.0.1-SNAPSHOT.jar app.jar
-
-# ENTRYPOINT ["java","-jar","/app.jar"]
-# EXPOSE 8081
-
-
 FROM eclipse-temurin:17-jdk-jammy
+RUN addgroup --system spring && adduser --system spring -ingroup spring
+USER spring:spring
 
-WORKDIR /app
+ADD target/config-service-0.0.1-SNAPSHOT.jar app.jar
 
-COPY .mvn/ .mvn
-COPY mvnw pom.xml ./
-RUN ./mvnw dependency:resolve
+ENTRYPOINT ["java","-jar","/app.jar"]
 
-COPY src ./src
+# FROM eclipse-temurin:17-jdk-jammy
 
-CMD ["./mvnw", "spring-boot:run"]
+# WORKDIR /app
+
+# COPY .mvn/ .mvn
+# COPY mvnw pom.xml ./
+# RUN ./mvnw dependency:resolve
+
+# COPY src ./src
+
+# CMD ["./mvnw", "spring-boot:run"]
