--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8099/eureka/
+      defaultZone: ${EUREKA-DEFAULT-ZONE}
 
 spring:
   cloud:
