--- a/config-data/registry-service.yml
+++ b/config-data/registry-service.yml
@@ -1,15 +1,9 @@
-# server.port=8099
-# eureka.instance.hostname=localhost
-# eureka.client.registerWithEureka=false
-# eureka.client.fetchRegistry=false
-# eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
-
 server:
   port: 8099
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: ${EUREKA-DEFAULT-ZONE}
   client:
     registerWithEureka: false
     fetchRegistry: false
