fix: config data 250424

--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA-DEFAULT-ZONE}/eureka/
+      defaultZone: ${EUREKA_DEFAULT_ZONE}/eureka/
 
 spring:
   cloud:
